Added the getline() function into dutil, as it is a better fit.
git-svn-id: svn://dyersweb.net/trunk/dutil@60 cfe9c3be-8345-9945-9e6e-274ac4269492

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -29,6 +29,6 @@ out := $(patsubst %.c,%,$(src))
 
 $(out) : $(src)
 	for i in $(out); do \
-		$(CC) $(CFLAGS) -o $$i $$i.c -ldutil; \
+	$(CC) $(CFLAGS) -o $$i $$i.c -ldutil -ldynstr; \
 	done
 
